# doc-chatbot

./: .gitignore  Makefile  data.txt  data_striped.txt  langgraph.json  main.py  pyproject.toml
frontend/: langgraph.json  package.json  pnpm-lock.yaml
frontend/apps/web/src/: main.tsx
frontend/apps/web/src/providers/: Thread.tsx
src/: ai_agent.py  chains.py  graph_constructor.py  graph_explorer.py  models.py  parser.py  pdf_loader.py  utils.py  wikibase_client.py  wikipedia_client.py
src/adapters/: doc.py  file_system.py  neo4j.py  wiki.py  wikibase.py  wikipedia.py
src/agent/: chains.py  graph_constructor.py  kg_constructor.py  kg_explorer.py  models.py  state_graph.py  states.py
src/base_agent/: state_graph.py  states.py
src/reader_agent/: chains.py  kg_constructor.py  kg_explorer.py  state_graph.py  states.py
