[tool.poetry]
name = "graph-reader"
version = "0.1.0"
description = ""
authors = ["Ali Sedaghatbaf <ali.sedaghatbaf@klarna.com>"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[[tool.poetry.source]]
name = "klarna-proprietary"
url = "https://artifactory.klarna.net/artifactory/api/pypi/v-pypi-production/simple"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
klarna-wiki-api = {version = "^0.12", source = "klarna-proprietary"}
neo4j = "^5.26.0"
langchain-core = "^0.3.17"
langchain-openai = "^0.2.8"
langchain-text-splitters = "^0.3.2"
tiktoken = "^0.8.0"
wikipedia = "^1.4.0"
pandas = "^2.2.3"
pydantic = "^2.9.2"
langgraph = "^0.2.46"
beautifulsoup4 = "^4.12.3"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
numpy = "1.26.2"
langchain-community = "^0.3.8"
sparqlwrapper = "^2.0.0"
python-dotenv = "^1.0.1"
mypy = "^1.13.0"
watchdog = "^6.0.0"
pymupdf = "^1.25.0"
streamlit = "^1.41.0"
langsmith = "^0.2.3"
torch = "^2.5.1"
docling = "^2.12.0"
docling-core = "^2.10.0"
langchain-huggingface = "^0.1.2"
langchain-milvus = "^0.1.7"
langchain-experimental = "^0.3.3"
langgraph-cli = {extras = ["inmem"], version = "^0.1.65"}
sentence-transformers = "^3.3.1"
langgraph-checkpoint-sqlite = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
